$Id: ChangeLog,v 1.52 2007-08-25 11:46:19 cmatsuoka Exp $

Stable versions
---------------

2.2.0 ()
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added TCB Tracker module loader
	- added Digital Tracker DTM module loader
	- added Real Tracker module loader
	- added X-Tracker module loader
	- added portable, 64bit-safe MMD0/1/2/3 MED loader
	- added Graoumf Tracker GTK module loader
	- added old Liquid Tracker "NO" module loader
	- added OSX CoreAudio driver
	- added S3M/PTM/IMF/LIQ/IT fine vibrato effect
	- added Archimedes Tracker loader
	- added Arc/Spark depacker
	- enabled WAV writer
	- enabled IMF filter effects
	- removed broken shared lib generation
	- removed packed structures
	- replaced non-free PowerPack depacker with Kyzer's PD version
	- replaced list management in IFF loader with kernel list helpers
	- replaced XMMS plugin with Beep Media Player plugin
	- fixed long-standing bug in S3M BPM handling, "Panic" plays correctly
	- fixed MDL effects translation
	- fixed MDL pattern order loading missing first pattern
	- fixed MDL memory corruption in envelope initialization
	- fixed MDL 16-bit sample depacking (reported by Paul Wise)
	- fixed MDL multisampled instrument mapping
	- fixed MDL note event keyoff (gothlord.mdl plays better)
	- fixed XM and MDL sample loop size
	- fixed XM BPM setting (speedup.xm plays correctly)
	- fixed LIQ effects and 16-bit sample loading
	- fixed S3M pan settings
	- fixed IT old instrument volume mode setting
	- fixed Sinaria sample size and finetune
	- fixed issues with OpenBSD
	- fixed issues with 64-bit machines
	- fixed loading of big-endian 16-bit samples
	- using Asle's Prowizard to handle packed MODs

2.1.1 (unreleased)
	- added more module format specs
	- added MO3 unpacking support
	- added file detection to the XMMS plugin
	- added Beep Media Player support to the XMMS plugin
	- added Epic Megagames PSM module support